Removed base url

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-baseurl: ""
+baseurl:
 url: https://www.dionigi.dev
 title: Dionigi's Projects & Thoughts
 subtitle: Jekyll theme for content-rich sites # this goes o
