--- a/_config.yml
+++ b/_config.yml
@@ -25,4 +25,4 @@ transfer:
   command: rsync
   settings: -av
   source: _site/
-  destination: ~/git/clayh53.github.com/
+  destination: ~/dionigi.dev/
