Adjusted baseurl to reflect custom domain
Removed 'baseurl' from _config.yml, added CNAME

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-baseurl:
-url: https://www.dionigi.dev
+url: "https://dionigi.dev"
 title: Dionigi's Projects & Thoughts
 subtitle: Jekyll theme for content-rich sites # this goes o
 author: brian (dionigi) raymond
